--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1763,6 +1763,7 @@ input, select, textarea {
 			.image.avatar48 img {
 				width: 48px;
 				height: 48px;
+				
 			}
 
 		.image.fit {
@@ -2248,7 +2249,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/java.jpg");
 			}
 
 			#main > section.two {
