--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   font-family: "Alata", sans-serif;
   font-weight: normal;
   font-style: normal;
-  min-width: 300px;
+  
 }
 
 /* line 12, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
@@ -3569,8 +3569,9 @@ h3 {
 
 /* line 56, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_portfolio_details.scss */
 .work_details_area .banner img {
-  width: 65%;
-  height: 65%;
+  max-width: 530px;
+  max-height: 100%; 
+  width: auto;
 }
 
 /* line 61, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_portfolio_details.scss */
@@ -3591,14 +3592,21 @@ h3 {
 }
 
 /* line 74, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_portfolio_details.scss */
-.work_details_area .details_single_img .thumb {
+@media (max-width: 767px) {
+  .work_details_area .details_single_img .thumb {
   margin-bottom: 30px;
-
+  }
 }
 /* line 76, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_portfolio_details.scss */
+
 .work_details_area .details_single_img .thumb img {
-  width: 140%;
+  max-width: 530px;
+  max-height: 100%; 
+  width: auto;
+  padding-bottom: 30px;
+  display: block;
 }
+
 
 /* line 2, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_team.scss */
 .creative_people .single_people {
