--- a/css/style.css
+++ b/css/style.css
@@ -774,7 +774,7 @@ h3 {
 
 /* line 13, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav {
-  background: #fff;
+  background: white;
   float: right;
   margin-top: 0;
   padding: 0;
@@ -836,6 +836,7 @@ h3 {
   padding-bottom: 3px;
   top: -11px;
   right: -5px;
+  
 }
 
 @media (max-width: 767px) {
@@ -856,6 +857,7 @@ h3 {
 /* line 78, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_slick-nav.scss */
 .slicknav_btn {
   background-color: transparent;
+  
   cursor: pointer;
   margin-bottom: 10px;
   position: relative;
@@ -1319,7 +1321,7 @@ h3 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background: #040E27;
+  background-color: #05668D;
 }
 
 @media (max-width: 767px) {
@@ -1344,7 +1346,7 @@ h3 {
 
 /* line 21, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_slider.scss */
 .slider_area .single_slider .slider_text h3 {
-  color: #FFF;
+  color: #A5BE00;
   font-family: "Alata", sans-serif;
   font-size: 50px;
   font-weight: 400;
@@ -1373,6 +1375,7 @@ h3 {
     font-size: 45px;
     letter-spacing: 3px;
     line-height: 55px;
+    color: #A5BE00;
   }
 }
 
@@ -1380,7 +1383,7 @@ h3 {
 .slider_area .single_slider .slider_text span {
   font-size: 30px;
   font-weight: 400;
-  color: #0181F5;
+  color: #C7CED8;
   position: relative;
   z-index: 1;
   display: block;
@@ -1409,10 +1412,10 @@ h3 {
   right: 0;
   text-align: center;
   top: 16.57%;
-  font-size: 215px;
+  font-size: 185px;
   text-transform: uppercase;
   z-index: 1;
-  -webkit-text-stroke: 1px #1E273D;
+  -webkit-text-stroke: 1px #427AA1;
   -webkit-text-fill-color: transparent;
   font-weight: 800;
   font-family: "Poppins", sans-serif;
@@ -2530,7 +2533,7 @@ h3 {
   background-repeat: no-repeat;
   position: relative;
   z-index: 0;
-  background: #040E27;
+  background: #05668D;
 }
 
 @media (max-width: 767px) {
@@ -2543,7 +2546,7 @@ h3 {
 /* line 36, ../../Arafath/CL/December/230. Portfolio/HTML/scss/_bradcam.scss */
 .bradcam_area h3 {
   font-size: 70px;
-  color: #fff;
+  color: #A5BE00;
   font-weight: 400;
   margin-bottom: 0;
   text-transform: capitalize;
@@ -3699,20 +3702,20 @@ h3 {
 
 /* Facebook */
 .fa-linkedin {
-  color: white;
+  color: #C7CEDB;
 }
 
 /* Twitter */
 .fa-instagram {
-  color: white;
+  color: #C7CEDB;
 }
 
 .fa-github {
-  color: white;
+  color: #C7CEDB;
 }
 
 .fa-envelope {
-  color: white;
+  color: #C7CEDB;
 }
 
 ul.icons {
